<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/car_sort_type_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_padding"
        android:layout_marginStart="@dimen/default_padding"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/car_mini_cards_list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/car_sort_order_button"
        android:hint="@string/car_sort_type_label"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/car_sort_type_menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none"
            app:simpleItems="@array/car_sort_types"
            app:simpleItemLayout="@layout/car_sort_type_text_view"
            tools:text="@string/sort_by_number" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/car_sort_order_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_inner_margin"
        app:layout_constraintTop_toTopOf="@id/car_sort_type_layout"
        app:layout_constraintBottom_toBottomOf="@id/car_sort_type_layout"
        app:layout_constraintStart_toEndOf="@id/car_sort_type_layout"
        style="@style/Widget.Material3.Button.IconButton.Filled.Tonal"
        tools:icon="@drawable/ic_asc_sort_type_24"
        tools:contentDescription="@string/car_sort_asc_sort" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/car_mini_cards_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/default_inner_margin"
        app:layout_constraintTop_toBottomOf="@id/car_sort_type_layout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:listitem="@layout/car_mini_card"
        tools:itemCount="3" />
</androidx.constraintlayout.widget.ConstraintLayout>
